[gd_scene load_steps=2 format=3 uid="uid://hostel_screen"]

[ext_resource type="Script" path="res://src/ui/screens/HostelScreen.gd" id="1_script"]

[node name="HostelScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 300.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 36
text = "银河招待所"

[node name="LevelContainerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 20
text = "选择关卡："

[node name="LevelContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 140.0
offset_right = 600.0
offset_bottom = 300.0
columns = 8

[node name="CharacterContainerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 320.0
offset_right = 250.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 20
text = "已解锁角色："

[node name="CharacterContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 360.0
offset_right = 500.0
offset_bottom = 420.0

[node name="StartLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 500.0
offset_right = 1000.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 28
text = "开始关卡"
